[package]
name = "zero-copy-vcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
termtree = "0.4.1"
